Map ratio and overflow fixed (+ download button positioning)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,7 +185,7 @@ a {
     position: relative;
     display: inline-flex;
     width: 100%;
-    height: 800px;
+    height: 850px;
     overflow: hidden;
 }
 
@@ -193,8 +193,8 @@ a {
     position: fixed;
     display: inline-block;
 
-    top: 90vh;
-    left: 80vw;
+    top: 88vh;
+    left: 75vw;
     width: auto;
     z-index: 99;
 }
